<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/signUpButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="60dp"
                    android:backgroundTint="#1B9700"
                    android:includeFontPadding="false"
                    android:paddingHorizontal="40dp"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textSize="34sp"
                    app:cornerRadius="40dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/nicknameInputView"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="100dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/roundanglelong"
                    android:ems="10"
                    android:hint="@string/nickname"
                    android:includeFontPadding="false"
                    android:inputType="textPersonName"
                    android:paddingHorizontal="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/privateKeyForSignUpView"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/roundangle"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/private_key"
                    android:includeFontPadding="false"
                    android:inputType="textMultiLine"
                    android:minHeight="180dp"
                    android:padding="20dp"
                    android:paddingHorizontal="20dp"
                    app:layout_constraintBottom_toTopOf="@+id/generateRandomKeyButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_min="180dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/nicknameInputView" />

                <Button
                    android:id="@+id/generateRandomKeyButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:backgroundTint="#00B0FF"
                    android:includeFontPadding="false"
                    android:text="@string/generate_random_key"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    app:cornerRadius="40dp"
                    app:layout_constraintBottom_toTopOf="@+id/signUpButton"
                    app:layout_constraintEnd_toEndOf="@+id/signUpButton"
                    app:layout_constraintStart_toStartOf="@+id/signUpButton" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>