<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginVertical="2dp"
                android:fontFamily="@font/amiri"
                android:foregroundGravity="fill_vertical"
                android:gravity="center_vertical"
                android:includeFontPadding="false"
                android:text="@string/settings"
                android:textColor="#FF9100"
                android:textSize="34sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_weight="1"
                    tools:src="@tools:sample/avatars" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:foregroundGravity="fill_vertical"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/nicknameTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="2dp"
                        android:fontFamily="@font/amiri"
                        android:foregroundGravity="fill_vertical"
                        android:gravity="center_vertical"
                        android:includeFontPadding="false"
                        android:text="TextView"
                        android:textAlignment="viewStart" />

                    <TextView
                        android:id="@+id/usernameTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="2dp"
                        android:fontFamily="@font/amiri"
                        android:foregroundGravity="fill_vertical"
                        android:gravity="center_vertical"
                        android:includeFontPadding="false"
                        android:text="TextView"
                        android:textAlignment="viewStart" />
                </LinearLayout>
            </LinearLayout>

            <Switch
                android:id="@+id/darkModeSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amiri"
                android:includeFontPadding="false"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:switchPadding="10dp"
                android:text="@string/dark_mode"
                android:textAlignment="viewStart" />

            <Switch
                android:id="@+id/autoDarkModeSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amiri"
                android:includeFontPadding="false"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:switchPadding="10dp"
                android:text="@string/auto_dark_mode"
                android:textAlignment="viewStart" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="200dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/logout_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_weight="1"
                    android:backgroundTint="#F50056"
                    android:fontFamily="@font/amiri"
                    android:includeFontPadding="false"
                    android:shadowRadius="40"
                    android:text="@string/log_out"
                    android:textAllCaps="false"
                    app:cornerRadius="40dp" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_weight="1"
                    android:backgroundTint="#EC0202"
                    android:fontFamily="@font/amiri"
                    android:includeFontPadding="false"
                    android:shadowRadius="40"
                    android:text="@string/delete_account"
                    android:textAllCaps="false"
                    app:cornerRadius="40dp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>